notes for night mode debugging

--- a/data/src/zabiniec/res/xml/map.xml
+++ b/data/src/zabiniec/res/xml/map.xml
@@ -41,7 +41,7 @@
 </g>
 <g id="tags">
 	<text transform="matrix(1 0 0 1 201.0566 196.9565)" font-family="'MyriadPro-Regular'" font-size="6">wiktoria</text>
-	<text transform="matrix(1 0 0 1 389.0918 249.748)" font-family="'MyriadPro-Regular'" font-size="6">ola</text>
+	<text transform="matrix(1 0 0 1 389.0918 249.748)" font-family="'MyriadPro-Regular'" font-size="6">nocny-pawilon</text>
 	<text transform="matrix(1 0 0 1 405.6426 157.498)" font-family="'MyriadPro-Regular'" font-size="6">biedronka</text>
 	<text transform="matrix(1 0 0 1 406.2031 862.5898)" font-family="'MyriadPro-Regular'" font-size="6">office</text>
 </g>
