--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.ZOO" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#008B39</item>
+        <item name="colorPrimaryVariant">#008B39</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/primary</item>
+        <item name="colorSecondary">#FFFFFF</item>
+        <item name="colorSecondaryVariant">#FFFFFF</item>
+        <item name="colorOnSecondary">#008B39</item>
 
         <!-- Map Colors -->
         <item name="colorMapBackground">#f8f9fa</item>
