--- a/presentation-core/src/main/res/drawable/ic_upload_24.xml
+++ b/presentation-core/src/main/res/drawable/ic_upload_24.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#000"
+        android:fillColor="#FFFF00FF"
         android:pathData="M5,20h14v-2H5V20zM5,10h4v6h6v-6h4l-7,-7L5,10z" />
 </vector>
