--- a/presentation-map/src/main/res/drawable/ic_map_penguin_64.xml
+++ b/presentation-map/src/main/res/drawable/ic_map_penguin_64.xml
@@ -5,26 +5,44 @@
     android:viewportHeight="1000">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M436.1,284.1c-4.7,0.4 -9.3,1.5 -13.9,2.8c-52.4,15 -81.6,84.1 -79.9,171.8c-15.6,22.4 -28.9,50.8 -37.7,83c-23.4,85.8 -5.7,165.4 39.7,177.8c1.8,0.5 3.6,0.9 5.4,1.1c2,-14.8 4.7,-30.1 8.2,-45.6c4.7,-20.9 10.8,-42.1 17.3,-60.7c19.5,44.7 48,84.2 83.5,117.7c10.2,12 16.4,28.2 16.4,46c0,21.2 -8.8,40 -22.5,52.4c-3,-0.1 -5.9,-0.1 -9,-0.1c-48.6,0 -88,8.4 -88,18.8L407.3,849.1h33.9h32c23.3,-15.2 43.7,-36.2 60.1,-61.5c50.9,29.8 109.5,50.5 172.5,60.6c-17.5,-108.6 -44.2,-228.4 -79.8,-352.8c-19.2,-67.2 -51.2,-123.9 -87.4,-161.6c5.3,-15.5 8.2,-32.4 8.2,-50.2c0,-73.2 -49.5,-132.6 -110.7,-132.6c-24.7,0 -46.2,13.4 -57.7,33.4c0,0 -15.5,3.3 -24,3.3c-27.8,0 -51.4,12.5 -60,29.9c8.6,17.4 32.2,29.9 60,29.9c8.5,0 16.7,1.2 24.1,3.3C390,270.6 411.5,284.1 436.1,284.1z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M602.5,656c2,-47.7 -4.1,-99.9 -19.3,-152.8c-0.9,-3.1 -1.8,-6.3 -2.8,-9.4c-16.1,42 -21.1,108 -10.8,180.5c2.2,15.7 5.1,31 8.4,45.6c-1.8,0.4 -3.6,0.7 -5.5,0.9c-10.3,1 -20.5,-1.6 -30.3,-7.1c0.3,5.5 0.5,11 0.5,16.6c0,20.9 -2.2,40.9 -6.3,59.2c0.1,0.1 0.2,0.1 0.3,0.2c-0,0 -0,0 -0,0c0.2,0.1 0.5,0.3 0.7,0.4c1.2,0.7 2.5,1.4 3.7,2.1c0.4,0.2 0.9,0.5 1.3,0.7c1.2,0.7 2.5,1.4 3.7,2c0.4,0.2 0.9,0.5 1.3,0.7c1.3,0.7 2.6,1.4 3.9,2.1c0.4,0.2 0.8,0.4 1.1,0.6c1.6,0.9 3.3,1.7 5,2.6c0.4,0.2 0.8,0.4 1.2,0.6c1.1,0.6 2.2,1.1 3.3,1.7c0,-0 0,-0 0,-0c5.7,2.8 11.4,5.5 17.2,8.1c14.9,-38.7 23.6,-86.2 23.6,-137.6C602.8,667.7 602.7,661.8 602.5,656z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M472.7,568.4c-4.2,-44.5 1.6,-85.7 14.4,-116.2c-37.4,-58.8 -84.7,-95.9 -128.7,-97.7c3,-7.8 6.4,-15 10.3,-21.7c-30.6,53.4 -35.9,144 -8.7,238.9l0,0h0c25.6,89.3 85,161.4 164.5,210.6c1.7,-16.5 2.7,-33.5 2.7,-51c0,-10.1 -0.3,-20.1 -0.9,-29.9C499.1,675.5 478.1,626.3 472.7,568.4z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M414.6,176.7c-5.3,5.4 -8.6,12.8 -8.6,20.9c0,16.4 13.3,29.7 29.7,29.7c14.5,0 26.6,-10.4 29.2,-24.2c5.1,8.4 8.1,18.3 8.1,28.9c0,0.9 -0,1.7 -0.1,2.6c-0,0.3 -0,0.5 -0,0.8c-0,0.6 -0.1,1.2 -0.1,1.8c-0,0.3 -0.1,0.6 -0.1,0.9c-0.1,0.6 -0.1,1.2 -0.2,1.8c-0,0.2 -0.1,0.5 -0.1,0.7c-0.1,0.8 -0.3,1.6 -0.4,2.5c-0,0.2 -0.1,0.3 -0.1,0.5c-0.1,0.7 -0.3,1.3 -0.4,1.9c-0.1,0.3 -0.1,0.6 -0.2,0.9c-0.1,0.5 -0.3,1.1 -0.4,1.6c-0.1,0.3 -0.2,0.6 -0.3,0.9c-0.2,0.6 -0.4,1.1 -0.6,1.7c-0.1,0.2 -0.2,0.5 -0.2,0.7c-0.3,0.7 -0.6,1.5 -0.9,2.2c-0.1,0.3 -0.2,0.5 -0.3,0.8c-0.2,0.5 -0.4,1 -0.6,1.4c-0.1,0.3 -0.3,0.6 -0.5,0.9c-0.2,0.4 -0.4,0.8 -0.6,1.3c-0.2,0.3 -0.3,0.6 -0.5,0.9c-0.2,0.5 -0.5,0.9 -0.8,1.3c-0.2,0.4 -0.5,0.8 -0.7,1.2c-0.3,0.5 -0.6,0.9 -0.9,1.4c-0.2,0.3 -0.4,0.6 -0.7,1c-0.2,0.3 -0.5,0.7 -0.7,1c-0.2,0.3 -0.5,0.7 -0.8,1c-0.2,0.3 -0.5,0.6 -0.7,0.9c-0.3,0.3 -0.5,0.7 -0.8,1c-0.2,0.3 -0.4,0.5 -0.6,0.7c-0.6,0.7 -1.1,1.3 -1.7,1.9c-0.2,0.2 -0.4,0.4 -0.6,0.6c-0.3,0.3 -0.7,0.7 -1,1c-0.2,0.2 -0.4,0.4 -0.6,0.6c-0.4,0.3 -0.7,0.7 -1.1,1c-0.2,0.2 -0.4,0.3 -0.6,0.5c-1.3,1.2 -2.8,2.3 -4.2,3.3c-0.1,0.1 -0.3,0.2 -0.4,0.3c-0.5,0.3 -0.9,0.6 -1.4,0.9c-0.2,0.1 -0.3,0.2 -0.5,0.3c-0.5,0.3 -1,0.6 -1.5,0.9c-0.1,0.1 -0.2,0.1 -0.3,0.2c-1.6,1 -3.3,1.8 -5.1,2.6c-0.1,0.1 -0.3,0.1 -0.4,0.2c-0.5,0.2 -1.1,0.5 -1.6,0.7c-0.2,0.1 -0.3,0.1 -0.5,0.2c-0.6,0.2 -1.1,0.4 -1.7,0.6c-0.3,0.1 -0.7,0.2 -1,0.3c-4.3,0.5 -8.6,1.3 -12.8,2.5c-15.9,4.5 -29.6,14.1 -41,27.5c43.9,13.6 87.8,52.7 122.8,108.3c0,-0 0,-0 0,-0c-0,-0 -0.1,-0.1 -0.1,-0.1c6.8,-11.3 11.1,-27.4 11.1,-45.2c0,-6.8 -1.7,-16.9 -2.9,-23.3c-10.5,-14.6 -21.7,-27.9 -33.3,-39.9c5,-5.1 9.4,-10.8 13,-17c0,-0 0,-0 0,-0c1.8,-3.1 3.5,-6.4 4.9,-9.8c0,-0.1 0.1,-0.2 0.1,-0.2c0.3,-0.8 0.6,-1.6 0.9,-2.3c0,-0.1 0,-0.1 0.1,-0.2c1,-2.5 1.8,-5.1 2.6,-7.8c0,-0.2 0.1,-0.3 0.1,-0.5c0.2,-0.7 0.4,-1.4 0.5,-2.1c0.1,-0.2 0.1,-0.4 0.2,-0.6c0.2,-0.7 0.3,-1.4 0.5,-2.1c0,-0.2 0.1,-0.4 0.1,-0.6c0.2,-0.9 0.3,-1.7 0.5,-2.6c0,-0 0,-0 0,-0c0.2,-0.9 0.3,-1.8 0.4,-2.7c0,-0.2 0.1,-0.4 0.1,-0.6c0.1,-0.7 0.2,-1.4 0.2,-2c0,-0.3 0.1,-0.6 0.1,-0.9c0.1,-0.6 0.1,-1.2 0.2,-1.8c0,-0.3 0,-0.6 0.1,-1c0,-0.6 0.1,-1.3 0.1,-1.9c0,-0.3 0,-0.6 0,-0.9c0,-0.9 0,-1.8 0,-2.7c0,-33 -18.5,-61.6 -45.8,-76c-5.4,-6.1 -13.4,-10 -22.2,-10c-2.3,0 -4.5,0.3 -6.7,0.8c-3.7,-0.5 -7.5,-0.8 -11.3,-0.8c-0.7,0 -1.3,0 -1.9,0c-10.6,0.2 -20.7,2.4 -30,6.1c-2.7,3.2 -5.2,6.6 -7.3,10.2l3.1,5.7C390.5,182.3 401.9,177.3 414.6,176.7z" />
-    <path
-        android:fillColor="#FFA6D3"
-        android:pathData="M409.8,217.5c0,-14.6 -12.7,-27.2 -31.3,-33.4c-0,0.1 -0.1,0.1 -0.1,0.2v-0l0,-0c-4.1,1.2 -8.4,2 -12.9,2.6c14.7,6.8 24.3,18 24.3,30.7c0,12.6 -9.6,23.8 -24.3,30.6c4.5,0.6 8.8,1.4 12.9,2.6c0,0.1 0.1,0.1 0.1,0.2C397.1,244.6 409.8,232 409.8,217.5z" />
+        android:pathData="M454.3,727c13,12.3 21.2,30.7 21.2,51.2c0,21.2 -8.8,40 -22.5,52.4c-3,-0.1 -5.9,-0.1 -9,-0.1c-48.6,0 -88,8.4 -88,18.8h51.8h33.9h32c30.3,-19.8 55.8,-49.4 73.7,-85.5L454.3,727z" />
     <path
         android:fillColor="#FF000000"
-        android:pathData="M435.6,197.6m-23.8,0a23.8,23.8 0,1 1,47.5 0a23.8,23.8 0,1 1,-47.5 0" />
+        android:pathData="M706.2,848.3c-17.5,-108.6 -44.2,-228.4 -79.8,-352.8c-35.1,-122.4 -112.3,-210.2 -181,-211.4v0l134.3,527.2C618.8,828.6 661.4,841.1 706.2,848.3z" />
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M422.3,187.1a6.7,6.5 0,1 0,13.3 0a6.7,6.5 0,1 0,-13.3 0z" />
+        android:pathData="M583.6,503.3c-27.6,-96.3 -79.3,-174.5 -138.2,-219.2c-7.7,-0.1 -15.3,0.8 -22.7,2.9c-73.5,21.1 -101.4,148.5 -62.4,284.7l0,0h0c31.1,108.7 112.4,192 219,239.4C613.3,735.3 617.5,621.5 583.6,503.3z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M509.7,492.3c6.3,-10.5 11.3,-21.8 14.9,-33.7c-37.3,-74.6 -90.2,-127.7 -142.9,-144.1c-9.2,10.9 -16.9,24.4 -22.9,40C412.1,356.7 470.3,410.8 509.7,492.3z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M536.8,789.6c4.1,-18.3 6.3,-38.3 6.3,-59.2c0,-49.7 -12.6,-94.2 -32.5,-123.4c10.7,36.9 16.8,79.3 16.8,124.4c0,17.5 -0.9,34.5 -2.7,51C528.8,784.8 532.8,787.2 536.8,789.6z" />
     <path
         android:fillColor="#808080"
-        android:pathData="M578.9,810.3c0,-14.2 -11.6,-25.7 -26,-25.7c-5.9,0 -11.4,2 -15.7,5.2c-0,-0 -0,-0 -0.1,-0c-2.6,16.3 -10.5,30.6 -21.6,40.5c-3,-0.1 -5.9,-0.1 -9,-0.1c-48.6,0 -88,8.4 -88,18.8L470.3,849.1h33.9h32c15.7,-10.2 30,-23.1 42.7,-38.1c-0,-0 -0,-0 -0,-0C578.9,810.8 578.9,810.6 578.9,810.3z" />
+        android:pathData="M579.3,810.5c0,-14.2 -11.6,-25.7 -26,-25.7c-5.9,0 -11.4,2 -15.7,5.2l-0,-0.1c-2.6,16.3 -10.5,30.6 -21.6,40.6c-3,-0.1 -5.9,-0.1 -9,-0.1c-48.6,0 -88,8.4 -88,18.8h51.8h33.9h32c15.7,-10.2 30,-23.1 42.7,-38.1l-0,-0C579.3,810.9 579.3,810.7 579.3,810.5z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M360.3,571.7c-11.2,-39.1 -16.9,-77.6 -17.6,-112.9c-15.6,22.4 -28.9,50.8 -37.7,83c-23.4,85.8 -5.7,165.4 39.7,177.8c1.8,0.5 3.6,0.9 5.4,1.1c2,-14.8 4.7,-30.1 8.2,-45.6c4.7,-20.9 10.4,-40.9 16.9,-59.5C369.6,601.6 364.6,586.9 360.3,571.7z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M583.2,488.1c-10,-85.9 -71.9,-139.9 -71.9,-139.9s4.2,18.7 4.2,29.3c0,17.8 -4.3,33.9 -11.1,45.2c0,0 0.1,0.1 0.1,0.1c-24.1,29.5 -37.2,84.4 -31.4,145.6c8.3,88.6 53.1,156.8 99.9,152.4c1.9,-0.2 3.7,-0.5 5.5,-0.9c-3.4,-14.6 -6.2,-29.8 -8.4,-45.6C559.3,598.5 565.3,529.6 583.2,488.1z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M436.5,284.4c33.6,-3.2 69.8,15.4 102.4,49.5c5.3,-15.5 8.2,-32.4 8.2,-50.2c0,-73.2 -49.5,-132.6 -110.7,-132.6c-24.7,0 -46.2,13.4 -57.7,33.4c-7.4,2.1 -15.5,3.3 -24,3.3c-27.8,0 -51.4,12.5 -60,29.9c8.6,17.4 32.2,29.9 60,29.9c8.5,0 16.7,1.2 24.1,3.3C390.5,270.7 411.9,284.4 436.5,284.4z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M445.4,284.1l26.1,36.6c19.9,-15.6 32.7,-39.9 32.7,-67.1c0,-47.1 -38.2,-85.3 -85.3,-85.3c-12,0 -23.3,2.5 -33.7,6.9c-2.4,2.9 -4.5,6 -6.4,9.2l4.4,6.8c9.7,-9 22.5,-14.6 36.5,-14.6c30.2,0 54.7,25.5 54.7,57C474.5,255.5 462.7,274.5 445.4,284.1z" />
+    <path
+        android:fillColor="#FFA6D3"
+        android:pathData="M378.7,184.4c-4.3,1.2 -8.9,2.1 -13.6,2.7c15.3,7.2 25.1,18.2 25.1,30.5c0,12.3 -9.8,23.3 -25,30.5c4.7,0.5 9.3,1.4 13.6,2.7c18.9,-7 31.4,-19.2 31.4,-33.2C410.2,203.6 397.6,191.4 378.7,184.4z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M436,197.7m-29.7,0a29.7,29.7 0,1 1,59.4 0a29.7,29.7 0,1 1,-59.4 0" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M436,197.7m-23.8,0a23.8,23.8 0,1 1,47.5 0a23.8,23.8 0,1 1,-47.5 0" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M422.7,187.2a6.7,6.5 0,1 0,13.3 0a6.7,6.5 0,1 0,-13.3 0z" />
 </vector>
